Fix loading indicator too big for landscape mode
Test Plan:
- Load app in portrait and landscape mode, make sure loading indicator
  looks right when app starts up.

--- a/style/app.css
+++ b/style/app.css
@@ -550,10 +550,9 @@ section[role="region"] > header:first-child h1 {
 }
 
 .app-loading {
-    width: 100%;
     height: 50%;
     background:url('/img/throbber-full.gif') no-repeat center center;
-    background-size: 40%;
+    background-size: 10rem;
 }
 
 #overlay {
